# learn_idiom_api

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Todo.md  docker-compose.db.yml
migrations/: 0001__CreateTables.sql  0002_SeedIdiomsTable.sql
src/: error.rs  main.rs
src/idiom_resource/: controller.rs  repository.rs
src/models/: mod.rs
src/tests/: mod.rs  test_containers.rs  test_idiom_repo.rs
