[package]
name = "learn_idiom_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
]}
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace", "fs"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.4"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"

[dev-dependencies]
testcontainers = { version = "0.16.7", features = ["blocking"] }
testcontainers-modules = { version = "0.4.2", features = ["postgres"] }
